--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,19 @@
 body{
-    font-family: Roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    text-align:center;
+    color:#ddd;
+    font-size:14px;
 }
+/* .main-bg{
+    background: url('#') no-repeat center center fixed; 
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+     width:100%;
+     height:100%;
+ } */
 
 footer{
     text-align:center;
@@ -50,4 +63,13 @@ footer{
 }
 .diceCup{
     background:#333;
+}
+.dice-area{
+
+}
+.top-spacer{
+    margin-top:10%;
+}
+.bottom-spacer{
+    margin-top:10%;
 }
