--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Roboto', sans-serif;
     font-family: 'Open Sans', sans-serif;
     text-align:center;
-    color:#333;
+    color:#ddd;
     font-size:14px;
 }
 /* .main-bg{
