added dynamic players

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,21 @@ footer{
 .bottom-spacer{
     margin-top:10%;
 }
+.player1{
+    color:black;
+}
+.player2{
+    color:black;
+}
+.player3{
+    color:black;
+}
+.player4{
+    color:black;
+}
+.player5{
+    color:black;
+}
+.player6{
+    color:black;
+}
