--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ footer{
     color:black;
 }
 .table{
-    height:768px;
-    max-height: 100%;
+    height:100%;
+    width:100%;
+    min-height: 100%;
 }
