--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,3 +96,10 @@ footer{
     width:100%;
     min-height: 100%;
 }
+
+.rh{
+    width:100%;
+    height:40%;
+    margin-top: 50%;
+    margin-left:2%;
+}
